Moved the close-btn inside the transcription/lation container, and matched the positioning to the elipsis menu one. I made it positioned fixed so its always visible in container, even on scroll. Commented out two functions in book-navigator there were giving console errors in full screen (related to removing the IA logo in fullscreen)

--- a/BookReader/BookReader.css
+++ b/BookReader/BookReader.css
@@ -3044,15 +3044,12 @@ modal-manager[mode=closed] {
 
 /* SLAM Custom Style for Translation/Transcription Container */
 .btnWrap {
-  position: absolute;
-  top: 0;
-  right: 32%;
   background-color: #eee;
   padding: 0.5rem;
   cursor: pointer;
-}
-.btnWrap:hover {
-  background-color: #ccc;
+  margin-bottom: 0.5rem;
+  margin-left: -0.8rem;
+  position: fixed;
 }
 
 .translationContainer,
@@ -3066,11 +3063,15 @@ modal-manager[mode=closed] {
     display: block;
     height: 100%;
     overflow-y: auto;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
     position: absolute;
     right: 0;
     top: 0;
     width: 32%;
+  }
+  .translationContainer #content,
+.transcriptionContainer #content {
+    margin-top: 3rem;
   }
   .translationContainer #content p:first-of-type,
 .transcriptionContainer #content p:first-of-type {
