--- a/src/css/_BRcustom.scss
+++ b/src/css/_BRcustom.scss
@@ -1,14 +1,11 @@
 /* SLAM Custom Style for Translation/Transcription Container */
 .btnWrap {
-  position: absolute;
-  top: 0;
-  right: 32%;
   background-color: #eee;
   padding: .5rem;
   cursor: pointer;
-  &:hover {
-    background-color: #ccc;
-  }
+  margin-bottom: .5rem;
+  margin-left: -.8rem;
+  position: fixed;
 }
 
 
@@ -21,13 +18,14 @@
     display: block;
     height: 100%;
     overflow-y: auto;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
     position: absolute;
     right:0;
     top:0;
     width:32%;
   
     #content {
+      margin-top: 3rem;
       p:first-of-type {
         margin-top: 0;
       }
